--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         </activity>
 
         <activity android:name=".RankingActivity"></activity>
+        <activity android:name=".helpActivity"></activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
