--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MapsActivity"
+            android:name=".LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
@@ -34,6 +34,7 @@
 
         <activity android:name=".RankingActivity"></activity>
         <activity android:name=".helpActivity"></activity>
+        <activity android:name=".MapsActivity"></activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
