--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
+    android:name=".NetworkSettings"
         android:allowBackup="true"
         android:icon="@mipmap/logo_square"
         android:label="@string/app_name"
