--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,9 +34,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".RankingActivity"></activity>
+        <activity android:name=".UserRankActivity"></activity>
         <activity android:name=".helpActivity"></activity>
         <activity android:name=".MapsActivity"></activity>
+        <activity android:name=".TeamRankActivity"></activity>
+        <activity android:name=".ProfilActivity"></activity>
 
         <meta-data
             android:name="com.google.android.gms.version"
